--- a/index.scss
+++ b/index.scss
@@ -50,17 +50,26 @@ $grå: #707070;
 
 html {
     scroll-behavior: smooth;
-    overflow-x: hidden; 
-    &.menu {
+    overflow-x: hidden;
+    &.hamburger {
         overflow-y: hidden;
-        header {
-            height: 100vh;
+        #kontakt {
+            z-index: -1 !important;
         }
     }
 }
 
 body {
     header {
+        #menu > *:not(nav) {
+            display: none;
+        }
+        #menu {
+            width: 35%;
+            nav {
+                width: 100%;
+            }
+        }
         a {
             transition: all 200ms ease;
             width: 100%;
@@ -82,11 +91,8 @@ body {
         div, nav {
             margin: 0 8% 0 8%;
         }
-        div {
+        #logo {
             width: 10%;
-        }
-        nav {
-            width: 40%;
         }
         li  {
             width: 100%;
@@ -266,7 +272,7 @@ body {
     }
 }
 @media only screen and (min-width: 640px) and (max-width: 740px) {
-    html body header nav {
+    html body header #menu {
         width: 50%;
     }
     #email label span {
@@ -283,46 +289,88 @@ body {
     }
 }
 @media only screen and (max-width: 640px) {
-    html body {
+    body {
         header {
-            cursor: pointer;
-            z-index: 2;
-            nav {
-                width: 7vh !important;
+            #menu {
                 display: flex;
+                flex-direction: column;
                 justify-content: center;
-                position: absolute;
-                right: 0%;
-                top: 4vh;
-                transform: translateY(-50%);
-                &, &::after, &::before {
-                    transition: all 100ms ease;
-                    background-color: $grå;
-                    height: .5vh !important;
-                    border-radius: 2px;
+                position: relative;
+                &, input {
+                    height: 100%;
+                    width: 7vh;
                 }
-                &::after, &::before {
-                    content: "";
+                input {
+                    display: block;
                     position: absolute;
-                    width: 100%;
+                    cursor: pointer;
+                    opacity: 0;
+                    z-index: 2;
+                    &:checked ~ span:nth-of-type(1) {
+                        transform: rotate(45deg) scale(1.03);
+                    }
+                    &:checked ~ span:nth-of-type(2) {
+                        opacity: 0;
+                        transform: scale(0.03, 0.03) translateX(-100%);
+                    }
+                    &:checked ~ span:nth-of-type(3) {
+                        transform: rotate(-45deg) scale(1.03);
+                    }
+                    &:checked ~ nav {
+                        &, ul {
+                            visibility: visible;
+                            pointer-events: all;
+                            opacity: 1;
+                        }
+                    }
                 }
-                &::after {
-                    top: -2vh;
+                span {
+                    display: block;
+                    position: relative;
+                    height: 4px;
+                    width: calc(12*3px);
+                    background-color: $grå;
+                    border-radius: 3px;
+                    margin: 4px 0 4px 0;
+                    transition: transform 300ms ease,
+                                opacity 300ms ease;
+                    &:nth-of-type(1) {
+                        transform-origin: 4px 8px;
+                    }
+                    &:nth-of-type(3) {
+                        transform-origin: 4px -4px;
+                    }
                 }
-                &::before {
-                    top: 2vh;                
+                
+            }
+            nav {
+                &, ul {
+                    display: flex;
+                    visibility: none;
+                    pointer-events: none;
+                    opacity: 0;
+                    transition: opacity 300ms ease;
+                    position: fixed;
+                    margin: 0;
+                    left: 0;
+                    top: 8vh;
+                    height: 100vh;
+                    width: 100vw;
+                    background-color: white;
                 }
                 ul {
-                    display: none;
-                }
-            }
-            &:hover {
-                > nav, > nav::after, > nav::before {
-                    background-color: $blå;
+                    background-image: url("media/skyer-mobil.svg");
+                    background-repeat: no-repeat;
+                    background-size: 60vh;
+                    background-position: 10% -11%;
+                    flex-direction: column;
+                    justify-content: space-evenly;
+                    a {
+                        font-size: 25px !important;
+                    }
                 }
             }
         }
-
         main {
             grid-template-areas:
             ". tjeneste     ."
@@ -332,7 +380,20 @@ body {
             ". kontakt      .";
             grid-template-columns: 10vw 80vw 10vw;
             grid-template-rows: 92vh 20vh 40vh 40vh 96vh;
+            #tjeneste {
+                grid-area: tjeneste;
+            }
+            #om {
+                grid-area: om;
+            }
+            #medlemmer {
+                grid-area: medlemmer;
+            }
+            #kontakt {
+                grid-area: kontakt;
+            }
             #beskrivelse {
+                grid-area: beskrivelse;
                 margin-bottom: 5vh;
                 padding: 5vh;
             }
@@ -395,6 +456,6 @@ body {
                 width: 200% !important;
                 transform: translateX(-50%);
             }
-        }
-    } 
+        } 
+    }  
 }
